# superglide-rs

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: keyboard_hook.rs  lib.rs  main.rs  settings.rs
src/routes/: +page.svelte
