[package]
name = "superglide-rs"
version = "0.1.0"
description = "Apex Legends Superglide Macro Tool"
authors = []
edition = "2021"

[lib]
name = "superglide_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
